Attempting fix for iphone x cutting off text

--- a/src/assets/stylesheets/common_mobile.css
+++ b/src/assets/stylesheets/common_mobile.css
@@ -82,7 +82,6 @@
 		border: 1px solid #707070;
 	}
 	.mobile_menu_item {
-		height: 50px;
 		border: none;
 		background: none;
 		font-family: Arial, Helvetica, sans-serif;
@@ -90,13 +89,10 @@
 		font-weight: bold;
 		color: white;
 		text-align: left;
-		padding: 8px 8px 8px 32px;
 	  text-decoration: none;
 	  display: block !important;
-	  transition: 0.3s;
 		white-space: nowrap;
 		margin-top: 10vh;
-		margin-bottom: 10vh;
 	}
 	@keyframes move_bg {
 		0% {
